// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventCard snapshot 1`] = `
<View
  glassEffectStyle="clear"
  intensity={60}
  style={
    [
      {
        "borderRadius": 16,
        "marginRight": 12,
        "overflow": "hidden",
        "width": 240,
      },
      {
        "backgroundColor": "#111",
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://example.com/image.jpg",
      }
    }
    style={
      {
        "height": 110,
        "width": "100%",
      }
    }
  />
  <View
    style={
      {
        "padding": 10,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 14,
            "fontWeight": "700",
          },
          {
            "color": "#fff",
          },
        ]
      }
    >
      GoCampus Event
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 11,
            "marginTop": 4,
          },
          {
            "color": "#aaa",
          },
        ]
      }
    >
      📅
       
      10 Dec
       
      • 
      18:00
       • 📍 
      Prishtina
    </Text>
  </View>
</View>
`;

exports[`FadeButton snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    collapsable={false}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text>
      Tap
    </Text>
  </View>
</View>
`;

exports[`PasswordInput snapshot 1`] = `
<View
  style={
    {
      "marginBottom": 12,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <TextInput
    onChangeText={[Function]}
    placeholder="Password"
    placeholderTextColor="#aaa"
    secureTextEntry={true}
    style={
      [
        {
          "backgroundColor": "rgba(255,255,255,0.12)",
          "borderRadius": 12,
          "fontSize": 15,
          "height": 48,
          "paddingHorizontal": 16,
          "paddingRight": 45,
        },
        {
          "borderColor": "#fff",
          "borderWidth": 1,
          "color": "#fff",
        },
        false,
      ]
    }
    value=""
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
        "padding": 4,
        "position": "absolute",
        "right": 12,
        "top": 12,
      }
    }
  >
    <Text>
      eye-outline
    </Text>
  </View>
</View>
`;
